complex-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: floris
spec:
  containers:
    - name: felix-web
      image: registry.access.redhat.com/ubi9/httpd-24:9.7
      ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        - name: https
          containerPort: 8443

    - name: floris-db
      image: registry.fedoraproject.org/f32/mysql
      ports:
        - name: dbport
          containerPort: 3306
