config-app.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: aristo-app
  name: aristo-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: aristo-app
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: aristo-app
    spec:
      containers:
        - image: registry.access.redhat.com/ubi9/httpd-24:9.7
          name: web
          ports:
          - containerPort: 8080

        - name: db
          image: registry.fedoraproject.org/f32/mysql
          ports:
            - name: dbport
              containerPort: 3306




# oc create cm cm-redhat --from-literal=user=marius --from-literal=database=aristo --dry-run=client -o yaml
# oc create secret generic sec-redhat --from-literal=password=mypa55 --from-literal=root_password=r00tpa55  --dry-run=client -o yaml >> config-app.yml
# oc set env deployment/aristo-app MYSQL_DATABASE- MYSQL_USER-
# oc set env deployment/aristo-app --containers db --from configmap/cm-redhat --prefix MYSQL_
# oc set env deployment/aristo-app --containers db --from secret/sec-redhat --prefix MYSQL_
