daemonset.yml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  creationTimestamp: null
  labels:
    app: aristo-daemon
  name: aristo-daemon
spec:
  selector:
    matchLabels:
      app: aristo-daemon
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: aristo-daemon
    spec:
      containers:
      - image: registry.access.redhat.com/ubi9/httpd-24:9.7
        name: httpd-24
        ports:
        - containerPort: 8080
        resources: {}
status: {}
# NO Command Create Deployment and edit
