deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: aristo-app
  name: aristo-app
spec:
  replicas: 4
  selector:
    matchLabels:
      app: aristo-app
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: aristo-app
    spec:
      containers:
      - image: registry.access.redhat.com/ubi9/httpd-24:9.7
        name: httpd-24
        ports:
        - containerPort: 8080
        resources: {}
status: {}
