edit-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: pod-patch
  labels:
    you: me
  # namespace: project1
spec:
  restartPolicy: Never
  containers:
    - name: felix-web
      image: registry.access.redhat.com/ubi9/httpdd-24:9.7
      ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        - name: https
          containerPort: 8443
# status:
