el-pod.yml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: el-pod
  name: el-pod
spec:
  containers:
  - image: registry.access.redhat.com/ubi9/httpd-24:9.7
    name: el-pod
    ports:
    - containerPort: 8080
    - containerPort: 8443
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
## oc run el-pod --image registry.access.redhat.com/ubi9/httpd-24:9.7 --port=8080 --dry-run=client -o yaml > el-pod.yml
