goodpod.yml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: goodpod
  name: goodpod
spec:
  containers:
  - image: registry.access.redhat.com/ubi9/httpd-24:9.7
    name: goodpod
    ports:
    - containerPort: 80
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
