pv-pvc-static.yml
apiVersion: v1
kind: Pod
metadata:
  name: floris-pod

spec:
  containers:
  - name: web
    image: registry.access.redhat.com/ubi9/httpd-24:9.7
    ports:
    - containerPort: 8080
    volumeMounts:
    - mountPath: /var/www/html
      name: flex-storage
  volumes:
  - name: flex-storage
    persistentVolumeClaim:
      claimName: pvc1
