ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: app1-ingress
spec:
  rules:
  - host: app1-ingress.apps.lab.ocp.com
    http:
      paths:
      - backend:
          service:
            name: app1
            port:
              number: 8080
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
# oc create ingress app1-ingress --rule="app1-ingress.apps.lab.ocp.com/*=app1:8080" --dry-run=client -o yaml
