my-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: custom
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      name: simple
      labels:
        app: web
    spec:
      containers:
        - name: felix-web
          image: registry.access.redhat.com/ubi9/httpd-24:9.7
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
            - name: https
              containerPort: 8443

---
apiVersion: v1
kind: Service
metadata:
  name: custom-service
spec:
  selector:
    app: web
  ports:
    - port: 8080

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  name: custom-service
spec:
  port:
    targetPort: 8080
  to:
    kind: ""
    name: custom-service
    weight: null

## oc expose service custom-service --dry-run=client -o yaml
